--- a/src/app/components/pokh/list-pokh/list-pokh.component.css
+++ b/src/app/components/pokh/list-pokh/list-pokh.component.css
@@ -1,5 +1,3 @@
-
-
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: #f4f4f4;
@@ -123,4 +121,13 @@ body {
 ::ng-deep ng-select .ng-dropdown-panel .ng-option-disabled {
   color: #aaa;
   background-color: #f9f9f9;
+}
+
+.tabulator-edit-list {
+  right: 0 !important;
+  left: auto !important;
+}
+
+.tabulator-edit-list .tabulator-edit-list-item {
+  text-align: left;
 }
