--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
+.row-highlight {
+  background-color: #d1ecf1 !important; /* Màu xanh nhạt, bạn có thể đổi */
+}
