--- a/src/app/components/VPP/DangkyVPP/dangky-vpp/dangky-vpp.component.css
+++ b/src/app/components/VPP/DangkyVPP/dangky-vpp/dangky-vpp.component.css
@@ -317,6 +317,13 @@ th {
 
 @media (max-width: 767px) {
     .button-section {
+        width: 100%;
+        height: auto;
+        margin-left: 0; 
+        position: relative;
+        z-index: 0;
+        transition: margin-left 0.2s ease;
+        padding: 15px;
         flex-direction: column;
         align-items: stretch;
     }
