--- a/src/app/components/VPP/DangkyVPP/dangky-vpp/dangky-vpp.component.html
+++ b/src/app/components/VPP/DangkyVPP/dangky-vpp/dangky-vpp.component.html
@@ -114,7 +114,7 @@
         </button>
       </div>
 
-      <div class="vr"></div>
+      <div class="vr mt-1"></div>
 
       <!-- TBP approval group -->
       <div class="button-group">
