--- a/src/app/components/VPP/list-vpp/list-vpp.component.html
+++ b/src/app/components/VPP/list-vpp/list-vpp.component.html
@@ -22,7 +22,7 @@
       </button>
     </div>
 
-    <div class="vr"></div>
+    <div class="vr mt-2"></div>
 
     <!-- Excel import/export group -->
     <div class="button-group">
