--- a/src/app/components/VPP/OfficeSupplyRequestSummary/office-supply-request-summary/office-supply-request-summary.component.html
+++ b/src/app/components/VPP/OfficeSupplyRequestSummary/office-supply-request-summary/office-supply-request-summary.component.html
@@ -42,7 +42,7 @@
 
     <!-- Excel import/export group -->
     <div class="button-group">
-        <button class="btn btn-outline-success">
+        <button class="btn btn-outline-success" (click)="exportToExcel()">
             <i class="fa-solid fa-file-excel"></i> Xuất Excel
         </button>
     </div>
